# sherpa-onnx

./: .gitignore  README.md  pyproject.toml
hotwords/: common_zh.txt
keywords/: xiaotu_xiaotu.txt
python-api-examples/: xiaotu-assistant.py  xiaotu-wakeup.py
